[gd_scene load_steps=4 format=3 uid="uid://isrxtbg8gliu"]

[ext_resource type="Script" uid="uid://cibvsu8m5d7ki" path="res://scenes/menu/play_screen.gd" id="1_n2uvh"]
[ext_resource type="PackedScene" uid="uid://dyfrlujou827f" path="res://scenes/ui/sound_button.tscn" id="2_p0nxr"]
[ext_resource type="Shortcut" uid="uid://b6h1co6kwvill" path="res://scenes/menu/shortcat_escape.tres" id="3_p0nxr"]

[node name="PlayScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_n2uvh")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 0

[node name="Bacground" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.146802, 0.212975, 0.209198, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Bacground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" parent="MarginContainer/Bacground/VBoxContainer" instance=ExtResource("2_p0nxr")]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
tooltip_text = "menu_new_game_btn_d"
text = "menu_new_game_btn"

[node name="ContinueGameButton" parent="MarginContainer/Bacground/VBoxContainer" instance=ExtResource("2_p0nxr")]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
tooltip_text = "menu_continue_game_btn_d"
text = "menu_continue_game_btn"

[node name="BackButton" parent="MarginContainer/Bacground/VBoxContainer" instance=ExtResource("2_p0nxr")]
custom_minimum_size = Vector2(184, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
tooltip_text = "back_btn_d"
shortcut = ExtResource("3_p0nxr")
text = "menu_back_btn"

[connection signal="pressed" from="MarginContainer/Bacground/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/Bacground/VBoxContainer/ContinueGameButton" to="." method="_on_continue_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/Bacground/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
